Slowly but surely

--- a/index.html
+++ b/index.html
@@ -116,8 +116,14 @@
                 <td id="9:9"></td>
             </tr>
         </table>
-        <h1>Debug Readout</h1>
-        <p id="debug_readout"></p>
+        <button>Generate Sudoku board and answer key</button>
+        <h1>How to use</h1>
+        <p>
+            Select the button above to generate a Sudoku board. It'll be filled in. That's cringe. We should make a not filled in one, but we aren't there yet now are we. 
+        </p>
+        <p>
+            Can you tell I'm just writing this to procrastinate coding?
+        </p>
         <script src="index.js"></script>
     </body>
 </html>
